Fix for 1.0.0 release - Add text color to ensure consistent contrast between background and text

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@
 	border-radius: 10px;
 	margin-top: 4px;
 	padding: 8px;
+	color: white;
 }
 
 .miniRagPluginConvoBox.query{
@@ -43,6 +44,7 @@
 
 .miniRagPluginSendButton.miniRagPluginSendButton{
 	background-color: green;
+	color: white;
 }
 
 /*Loading Animation - Start*/
